@@ -89,6 +89,7 @@ popd
 - Updated to upstream version: 0.6.6
 - [BGBUILD-113] Allow to specify supported file formats for operating system plugin
 - [BGBUILD-73] Add support for kickstart files
+- [BGBUILD-80] VMware .tgz Bundle Should Expand Into Subdirectory, Not Current Directory
 
 * Thu Dec 02 2010  <mgoldman@redhat.com> - 0.6.5-1
 - Updated to new upstream release: 0.6.5
